# stock-analysis

./: .gitignore  README.md  stock-quotes.db
stock-data-analyze/: pyproject.toml  stock-analysis.py
stock-data-clean/: build.sbt
stock-data-clean/src/main/scala/: main.scala
stock-data-ingest/: Cargo.toml
stock-data-ingest/src/: main.rs
