[tool.poetry]
name = "stock-data-analyze"
version = "0.1.0"
description = "Analyze stock data from previous two steps"
authors = ["Jacob Leon"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
seaborn = "^0.12.1"
ipython = "^8.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
