[package]
name = "stock-data-ingest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yahoo_finance_api = "1.3.0"
tokio = { version = "1.23.0", features = ["full"] }
tokio-test = "0.4.2"
rusqlite = { version = "0.28.0", features = ["bundled"] }